@@ -4895,9 +4895,16 @@ genPlus (iCode * ic)
       pair = getPairId (AOP (IC_RIGHT (ic)));
       if (pair != PAIR_BC && pair != PAIR_DE)
         {
-          pair = isPairDead (PAIR_DE, ic) ? PAIR_DE : PAIR_BC;
-          if (!isPairDead (pair, ic))
-            save_pair = TRUE;
+          if (AOP_TYPE (IC_RIGHT (ic)) == AOP_REG && AOP (IC_RIGHT (ic))->aopu.aop_reg[0]->rIdx == C_IDX && !bitVectBitValue (ic->rSurv, B_IDX))
+            pair = PAIR_BC;
+          else if (AOP_TYPE (IC_RIGHT (ic)) == AOP_REG && AOP (IC_RIGHT (ic))->aopu.aop_reg[0]->rIdx == E_IDX && !bitVectBitValue (ic->rSurv, D_IDX))
+            pair = PAIR_DE;
+          else
+            {
+              pair = isPairDead (PAIR_DE, ic) ? PAIR_DE : PAIR_BC;
+              if (!isPairDead (pair, ic))
+                save_pair = TRUE;
+            }
         }
       fetchPair (PAIR_IY, AOP (IC_LEFT (ic)));
       if (save_pair)
@@ -4949,7 +4956,7 @@ genPlus (iCode * ic)
     }
 
   if (getPairId (AOP (IC_RESULT (ic))) == PAIR_HL && AOP_TYPE (IC_RIGHT (ic)) == AOP_REG &&
-    AOP (IC_RIGHT (ic))->aopu.aop_reg[0]->rIdx == C_IDX && !bitVectBitValue(ic->rSurv, B_IDX))
+    AOP (IC_RIGHT (ic))->aopu.aop_reg[0]->rIdx == C_IDX && !bitVectBitValue (ic->rSurv, B_IDX))
     {
       if (AOP (IC_RIGHT (ic))->aopu.aop_reg[1] && (AOP (IC_RIGHT (ic))->aopu.aop_reg[1]->rIdx == H_IDX || AOP (IC_RIGHT (ic))->aopu.aop_reg[1]->rIdx == L_IDX))
         {
@@ -7257,9 +7264,10 @@ shiftR2Left2Result (const iCode *ic, operand * left, int offl,
     }
   else
     {
+      bool use_b = (!bitVectBitValue (ic->rSurv, B_IDX) && !(AOP_TYPE (result) == AOP_REG && (AOP (result)->aopu.aop_reg[0]->rIdx == B_IDX || AOP (result)->aopu.aop_reg[1]->rIdx == B_IDX)));
       if(!regalloc_dry_run)
         {
-          emit2 ("ld a,!immedbyte", shCount);
+          emit2 ("ld %s,!immedbyte", use_b ? "b" : "a", shCount);
           emitLabelNoSpill (tlbl->key + 100);
         }
       regalloc_dry_run_cost += 2;
@@ -7268,10 +7276,15 @@ shiftR2Left2Result (const iCode *ic, operand * left, int offl,
 
       if(!regalloc_dry_run)
         {
-          emit2 ("dec a");
-          emit2 ("jp NZ,!tlabel", tlbl->key + 100);
+          if (use_b)
+            emit2 ("djnz !tlabel", tlbl->key + 100);
+          else
+            {
+              emit2 ("dec a");
+              emit2 ("jp NZ,!tlabel", tlbl->key + 100);
+            }
         }
-      regalloc_dry_run_cost += 4;
+      regalloc_dry_run_cost += use_b ? 2 : 4;
     }
 }
 
@@ -8777,24 +8790,39 @@ genAddrOf (const iCode *ic)
     }
   else
     {
-      spillPair (PAIR_HL);
+      PAIR_ID pair;
+
       if (sym->onStack)
         {
+          if (getPairId (AOP ( IC_RESULT (ic))) == PAIR_IY)
+            pair = PAIR_IY;
+          else
+            {
+              pair = PAIR_HL;
+              spillPair (PAIR_HL);
+            }
+
           /* if it has an offset  then we need to compute it */
           if (sym->stack > 0)
-            emit2 ("ld hl,!immedword", sym->stack + _G.stack.pushed + _G.stack.offset + _G.stack.param_offset);
+            emit2 ("ld %s,!immedword", _pairs[pair].name, sym->stack + _G.stack.pushed + _G.stack.offset + _G.stack.param_offset);
           else
-            emit2 ("ld hl,!immedword", sym->stack + _G.stack.pushed + _G.stack.offset);
-          regalloc_dry_run_cost += 3;
-          emit2 ("add hl,sp");
-          regalloc_dry_run_cost += 1;
+            emit2 ("ld %s,!immedword", _pairs[pair].name, sym->stack + _G.stack.pushed + _G.stack.offset);
+          regalloc_dry_run_cost += (pair == PAIR_IY ? 4 : 3);
+          emit2 ("add %s,sp", _pairs[pair].name);
+          regalloc_dry_run_cost += (pair == PAIR_IY ? 2 : 1);
         }
       else
         {
-          emit2 ("ld hl,!hashedstr", sym->rname);
-          regalloc_dry_run_cost += 3;
+          pair = getPairId (AOP ( IC_RESULT (ic)));
+          if (pair == PAIR_INVALID)
+            {
+              pair = PAIR_HL;
+              spillPair (PAIR_HL);
+            }
+          emit2 ("ld %s,!hashedstr", _pairs[pair].name, sym->rname);
+          regalloc_dry_run_cost += (pair == PAIR_IY ? 4 : 3);
         }
-      commitPair (AOP (IC_RESULT (ic)), PAIR_HL);
+      commitPair (AOP (IC_RESULT (ic)), pair);
     }
   freeAsmop (IC_RESULT (ic), NULL, ic);
 }
